--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,3 +20,4 @@ notifier:
   type: telegram
   bot_token: !ENV ${TELEGRAM_BOT_TOKEN}
   chat_id: !ENV ${TELEGRAM_CHAT_ID}
+  thread_id: !ENV ${TELEGRAM_THREAD_ID}
