--- a/example.env
+++ b/example.env
@@ -1,9 +1,5 @@
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+TELEGRAM_THREAD_ID=
 
 FILE_PATH = /tmp/outages
