--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,6 +12,10 @@ jobs:
       matrix:
         python-version: ["3.11", "3.13"]
     steps:
+    - name: Print GITHUB_WORKSPACE
+      run: echo $GITHUB_WORKSPACE
+    - name: Show files
+      run: ls -l
     - name: ruff-action
       uses: astral-sh/ruff-action@v3.5.1
       with:
