--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Print GITHUB_WORKSPACE
       run: echo $GITHUB_WORKSPACE
     - name: Show files
-      run: ls -l ../
+      run: ls -l 
     - name: ruff-action
       uses: astral-sh/ruff-action@v3.5.1
       with:
