--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,18 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.13"]
+        python-version: ["3.11"]
     steps:
     - name: Checkout repo
       uses: actions/checkout@v5
-    - name: Print GITHUB_WORKSPACE
-      run: echo $GITHUB_WORKSPACE
     - name: Show files
       run: ls -l 
     - name: ruff-action
       uses: astral-sh/ruff-action@v3.5.1
       with:
         src: >-
-          "./src"
-          "./main.py"
-          "./tests"
+          "src"
+          "main.py"
+          "tests"
