--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,6 +5,8 @@ on:
       - main
       - feature-*
 
+
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -14,7 +16,20 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v5
-    - name: Show files
-      run: ls -l 
     - name: ruff-action
       uses: astral-sh/ruff-action@v3.5.1
+  pytest:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+    - name: Install the project
+      run: uv sync --locked --all-extras --dev
+    - name: Run pytest
+      run: uv run pytest
+    
