Feature add GitHub actions (#1)
* Debug

* Add step

* ls

* Change paths

* Remove paths

* Remove unused imports

* Add pytest dependency and action

* Remove mariadb

* Fix syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ dependencies = [
     "certifi==2025.10.5",
     "charset-normalizer==3.4.4",
     "idna==3.11",
-    "mariadb==1.1.14",
     "orjson==3.11.4",
     "packaging==25.0",
     "pyaml-env==1.2.2",
@@ -19,4 +18,9 @@ dependencies = [
     "typing-inspection==0.4.2",
     "urllib3==2.5.0",
     "uv==0.9.5",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
 ]
