--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,23 +3,31 @@ on:
   push:
     branches:
       - main
-      - feature-branch-*
+      - feature-*
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.13"]
+        python-version: ["3.11"]
     steps:
-    - name: Print GITHUB_WORKSPACE
-      run: echo $GITHUB_WORKSPACE
-    - name: Show files
-      run: ls -l
+    - name: Checkout repo
+      uses: actions/checkout@v5
     - name: ruff-action
       uses: astral-sh/ruff-action@v3.5.1
-      with:
-        src: >-
-          "./src"
-          "./main.py"
-          "./tests"
+  pytest:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+    - name: Install the project
+      run: uv sync --locked --all-extras --dev
+    - name: Run pytest
+      run: uv run pytest
+    
